Refactor some test logic in TestContainerPlugin